// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`function:surveyByID request should match snapshot 1`] = `
Object {
  "key": Object {
    "node": Object {
      "S": "aa-bb-ccdjfbnj",
    },
    "path": Object {
      "S": "survey",
    },
  },
  "operation": "GetItem",
  "version": "2017-02-28",
}
`;

exports[`function:surveyByID response surveyType is multiple choice should match snapshot 1`] = `
Object {
  "__typename": "SurveyMultipleChoice",
  "id": "aa-bb-cc",
  "label": "Coffee?",
}
`;

exports[`function:surveyByID response surveyType is textarea should match snapshot 1`] = `
Object {
  "__typename": "SurveyTextarea",
  "id": "aa-bb-cc",
  "label": "How are you?",
}
`;
